# sudoku-rust

./: Cargo.toml  Cargo.toml~
src/: main.rs
src/ui/: mod.rs  mod.rs~
src/ui/gui/: mod.rs  mod.rs~
src/ui/support/: #clipboard.rs#  mod.rs
