[package]
name = "sudoku"
version = "0.1.0"
authors = ["mkissarli <kissarlim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.28"
imgui = "0.6.0"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
clipboard = "*"